whisper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whisper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whisper
  template:
    metadata:
      labels:
        app: whisper
    spec:
      containers:
        - name: whisper
          image: onerahmet/openai-whisper-asr-webservice:latest
          ports:
            - containerPort: 9000
