whisper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whisper
spec:
  selector:
    app: whisper
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
